--- a/index.html
+++ b/index.html
@@ -8,32 +8,38 @@
         <title>Студія</title>
         <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
             rel="stylesheet">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+            integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+            crossorigin="anonymous" referrerpolicy="no-referrer" />
         <link rel="stylesheet" href="./css/styles.css">
     </head>
     <body>
 <!--Logo, Nav bar, contacts-->
-        <Header>
-            <a href="./index.html" class="logo">
-                <span class="logo-part">Web</span>Studio
-            </a>
-        
-            <nav>
-                <ul class="navigation list">
-                    <li>
-                        <a href="./index.html" class="navigation-bar condition">Студія</a>
-                    </li>
-                    <li>
-                        <a href="./portfolio.html" class="navigation-bar">Портфоліо</a>
-                    </li>
-                    <li>
-                        <a href="" class="navigation-bar">Контакти</a>
-                    </li>
-                </ul>
-            </nav>
-            <div class="contacts">
-                <a href="mailto:info@devstudio.com" class="contacts-head">info@devstudio.com</a>
-                <a href="tel:+380961111111" class="contacts-head">+38 096 111 11 11</a>
+        <Header class="head-border">
+            <div class="container navigation">
+                <!-- logo -->
+                <a href="./index.html" class="logo">
+                    <span class="logo-part">Web</span>Studio
+                </a>
+                <!-- Navigation -->
+                <nav>
+                    <ul class="navigation-list list">
+                        <li class="navigation-li">
+                            <a href="./index.html" class="navigation-bar condition">Студія</a>
+                        </li>
+                        <li class="navigation-li">
+                            <a href="./portfolio.html" class="navigation-bar ">Портфоліо</a>
+                        </li>
+                        <li class="navigation-li">
+                            <a href="" class="navigation-bar">Контакти</a>
+                        </li>
+                    </ul>
+                </nav>
+                <!-- Contacts -->
+                <div class="contacts contacts-hover">
+                    <a href="mailto:info@devstudio.com" class="contacts-head">info@devstudio.com</a>
+                    <a href="tel:+380961111111" class="contacts-head">+38 096 111 11 11</a>
+                </div>
             </div>
         </Header>
 
@@ -117,26 +123,28 @@
         
 <!--knock knock, who is there?-->
         <footer class="foot">
-            <!-- logo -->
-            <a href="./index.html" class="logo-foot">
-                <span class="logo-part">Web</span>Studio
-            </a>
-            <!-- Contacts, address -->
-            <address class="contacts">
-                <ul class="list">
-                    <li>
-                        <a href="https://goo.gl/maps/iUsgY4HWAubCHf399" target="_blank" rel="noopener noreferrer"
-                            class="contacts-addrs">м. Київ,
-                            пр-т Лесі Українки, 26</a>
-                    </li>
-                    <li>
-                        <a href="mailto:info@devstudio.com" class="contacts-center">info@devstudio.com</a>
-                    </li>
-                    <li>
-                        <a href="tel:+380961111111" class="contacts-center">+38 096 111 11 11</a>
-                    </li>
-                </ul>
-            </address>
+            <div class="container">
+                <!-- logo -->
+                <a href="./index.html" class="logo-foot">
+                    <span class="logo-part">Web</span>Studio
+                </a>
+                <!-- Contacts, address -->
+                <address class="contact-foot contacts-hover">
+                    <ul class="list">
+                        <li class="addrs-wrap">
+                            <a href="https://goo.gl/maps/iUsgY4HWAubCHf399" target="_blank" rel="noopener noreferrer"
+                                class="contacts-addrs">м. Київ,
+                                пр-т Лесі Українки, 26</a>
+                        </li>
+                        <li class="addrs-wrap">
+                            <a href="mailto:info@devstudio.com" class="contacts-center">info@devstudio.com</a>
+                        </li>
+                        <li class="addrs-wrap">
+                            <a href="tel:+380961111111" class="contacts-center">+38 096 111 11 11</a>
+                        </li>
+                    </ul>
+                </address>
+            </div>
         </footer>
 
 
