--- a/portfolio.html
+++ b/portfolio.html
@@ -9,113 +9,117 @@
         <title>Портфоліо</title>
         <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
         rel="stylesheet">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+            integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+            crossorigin="anonymous" referrerpolicy="no-referrer" />
         <link rel="stylesheet" href="./css/styles.css">
     </head>
 
     <body>
 <!--Logo, Nav bar, contacts-->
-        <Header>
-<!-- logo -->
-            <a href="./index.html" class="logo">
-                <span class="logo-part">Web</span>Studio
-            </a>
-<!-- Navigation -->
-            <nav>
-                <ul class="navigation list">
-                    <li>
-                        <a href="./index.html" class="navigation-bar">Студія</a>
-                    </li>
-                    <li>
-                        <a href="./portfolio.html" class="navigation-bar condition">Портфоліо</a>
-                    </li>
-                    <li>
-                        <a href="" class="navigation-bar">Контакти</a>
-                    </li>
-                </ul>
-            </nav>
-<!-- Contacts -->
-            <div class="contacts">
-                <a href="mailto:info@devstudio.com" class="contacts-head">info@devstudio.com</a>
-                <a href="tel:+380961111111" class="contacts-head">+38 096 111 11 11</a>
+        <Header class="head-border">
+            <div class="container navigation">
+                <!-- logo -->
+                <a href="./index.html" class="logo">
+                    <span class="logo-part">Web</span>Studio
+                </a>
+                <!-- Navigation -->
+                <nav>
+                    <ul class="navigation-list list">
+                        <li class="navigation-li">
+                            <a href="./index.html" class="navigation-bar">Студія</a>
+                        </li>
+                        <li class="navigation-li">
+                            <a href="./portfolio.html" class="navigation-bar condition">Портфоліо</a>
+                        </li>
+                        <li class="navigation-li">
+                            <a href="" class="navigation-bar">Контакти</a>
+                        </li>
+                    </ul>
+                </nav>
+                <!-- Contacts -->
+                <div class="contacts contacts-hover">
+                    <a href="mailto:info@devstudio.com" class="contacts-head">info@devstudio.com</a>
+                    <a href="tel:+380961111111" class="contacts-head">+38 096 111 11 11</a>
+                </div>
             </div>
         </Header>
 
 <!--Unicue site container-->
         <main>
 <!-- Filter -->
-            <section class="products">
+            <section class="container">
                 <h1></h1>
-                <ul class="list">
-                    <li>
+                <ul class="filter list">
+                    <li class="filter-btn">
                         <button type="button" class="btn">
                             Усі
                         </button>
                     </li>
-                    <li>
+                    <li class="filter-btn">
                         <button type="button" class="btn">
                             Веб-сайти
                         </button>
                     </li>
-                    <li>
+                    <li class="filter-btn">
                         <button type="button" class="btn">
                             Додатки
                         </button>
                     </li>
-                    <li>
+                    <li class="filter-btn">
                         <button type="button" class="btn">
                             Дизайн
                         </button>
                     </li>
-                    <li>
+                    <li class="filter-btn">
                         <button type="button" class="btn">
                             Маркетинг
                         </button>
                     </li>
                 </ul>
 
-                <ul class="list">
-                    <li>
+                <ul class="products-list products list">
+                    <li class="product-position">
                         <img src="./images/tehnocrack.jpg" alt="tehnocrack web site" width="370" height="294">
                         <h2>Технокряк</h2>
                         <p>Веб-сайт</p>
                     </li>
-                    <li>
+                    <li class="product-position">
                         <img src="./images/basketball.jpg" alt="poster for basketball match New Orleans vs Golden star" width="370" height="294">
                         <h2>Постер New Orlean vs Golden Star</h2>
                         <p>Дизайн</p>
                     </li>
-                    <li>
+                    <li class="product-position">
                         <img src="./images/seafood.jpg" alt="app for seafood restaurant" width="370" height="294">
                         <h2>Ресторан Seafood</h2>
                         <p>Додаток</p>
                     </li>
-                    <li>
+                    <li class="product-position">
                         <img src="./images/Prime.jpg" alt="marketing for Prime project" width="370" height="294">
                         <h2>Проєкт Prime</h2>
                         <p>Маркетинг</p>
                     </li>
-                    <li>
+                    <li class="product-position">
                         <img src="./images/boxes.jpg" alt="app for Boxes project" width="370" height="294">
                         <h2>Проєкт Boxes</h2>
                         <p>Додаток</p>
                     </li>
-                    <li>
+                    <li class="product-position">
                         <img src="./images/noborders.jpg" alt="web site for Inspiration has no Borders" width="370" height="294">
                         <h2>Inspiration has no Borders</h2>
                         <p>Веб-сайт</p>
                     </li>
-                    <li>
+                    <li class="product-position">
                         <img src="./images/limited.jpg" alt="design for Limited Edition publication" width="370" height="294">
                         <h2>Видання Limited Edition</h2>
                         <p>Дизайн</p>
                     </li>
-                    <li>
+                    <li class="product-position">
                         <img src="./images/lab.jpg" alt="marketing for LAB project" width="370" height="294">
                         <h2>Проєкт LAB</h2>
                         <p>Маркетинг</p>
                     </li>
-                    <li>
+                    <li class="product-position">
                         <img src="./images/business.jpg" alt="app for Growing Business company" width="370" height="294">
                         <h2>Growing Business</h2>
                         <p>Додаток</p>
@@ -126,25 +130,28 @@
 
 <!--knock knock, who is there?-->
         <footer class="foot">
-<!-- logo -->
-            <a href="./index.html" class="logo-foot">
-                <span class="logo-part">Web</span>Studio
-            </a>
-<!-- Contacts, address -->
-            <address class="contacts">
-                <ul class="list">
-                    <li>
-                        <a href="https://goo.gl/maps/iUsgY4HWAubCHf399" target="_blank" rel="noopener noreferrer" class="contacts-addrs">м. Київ,
-                            пр-т Лесі Українки, 26</a>
-                    </li>
-                    <li>
-                        <a href="mailto:info@devstudio.com" class="contacts-center">info@devstudio.com</a>
-                    </li>
-                    <li>
-                        <a href="tel:+380961111111" class="contacts-center">+38 096 111 11 11</a>
-                    </li>
-                </ul>
-            </address>
+            <div class="container">
+                <!-- logo -->
+                <a href="./index.html" class="logo-foot">
+                    <span class="logo-part">Web</span>Studio
+                </a>
+                <!-- Contacts, address -->
+                <address class="contact-foot contacts-hover">
+                    <ul class="list">
+                        <li class="addrs-wrap">
+                            <a href="https://goo.gl/maps/iUsgY4HWAubCHf399" target="_blank" rel="noopener noreferrer"
+                                class="contacts-addrs">м. Київ,
+                                пр-т Лесі Українки, 26</a>
+                        </li>
+                        <li class="addrs-wrap">
+                            <a href="mailto:info@devstudio.com" class="contacts-center">info@devstudio.com</a>
+                        </li>
+                        <li class="addrs-wrap">
+                            <a href="tel:+380961111111" class="contacts-center">+38 096 111 11 11</a>
+                        </li>
+                    </ul>
+                </address>
+            </div>
         </footer>
 
 
