--- a/index.html
+++ b/index.html
@@ -47,29 +47,31 @@
         <main>
 <!-- hero -->
             <section class="hero">
-                <h1>Ефективні рішення для вашого бізнесу</h1>
-                <button type="button" class="order-btn">
-                    Замовити послугу
-                </button>
+                <div class="container hero-content">
+                    <h1>Ефективні рішення для вашого бізнесу</h1>
+                    <button type="button" class="order-btn">
+                        Замовити послугу
+                    </button>
+                </div>
             </section>
 
 <!-- our benefits -->
-            <section class="benefits">
+            <section class="benefits container">
                 <h2></h2>
-                <ul class="list">
-                    <li>
+                <ul class="benefits-list list">
+                    <li class="benefits-point">
                         <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
                         <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
                     </li>
-                    <li>
+                    <li class="benefits-point">
                         <h3>ПУНКТУАЛЬНІСТЬ</h3>
                         <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
                     </li>
-                    <li>
+                    <li class="benefits-point">
                         <h3>ПЛАНУВАННЯ</h3>
                         <p>Так само консультація з широким активом значною мірою зумовлює.</p>
                     </li>
-                    <li>
+                    <li class="benefits-point">
                         <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
                         <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
                     </li>
@@ -77,7 +79,7 @@
             </section>
 
 <!-- what we do -->
-            <section class="whatwedo">
+            <section class="whatwedo container">
                 <h2>Чим ми займаємося</h2>
                 <ul class="list">
                     <li>
@@ -93,7 +95,7 @@
             </section>
 
 <!-- our team -->
-            <section class="team">
+            <section class="team container">
                 <h2>Наша команда</h2>
                 <ul class="list">
                     <li>
