--- a/index.html
+++ b/index.html
@@ -81,14 +81,14 @@
 <!-- what we do -->
             <section class="whatwedo container">
                 <h2>Чим ми займаємося</h2>
-                <ul class="list">
-                    <li>
+                <ul class="whatwedo-list list">
+                    <li class="whatwedo-point">
                         <img src="./images/img_code.jpg" alt="coding" width="370" height="294">
                     </li>
-                    <li>
+                    <li class="whatwedo-point">
                         <img src="./images/img_app.jpg" alt="app developer" width="370" height="294">
                     </li>
-                    <li>
+                    <li class="whatwedo-point">
                         <img src="./images/img_color.jpg" alt="color expirience" width="370" height="294">
                     </li>
                 </ul>
@@ -97,23 +97,23 @@
 <!-- our team -->
             <section class="team container">
                 <h2>Наша команда</h2>
-                <ul class="list">
-                    <li>
+                <ul class="team-list list">
+                    <li class="team-point">
                         <img src="./images/igor.jpg" alt="Product Designer Igor Demianenko" width="270" height="260">
                         <h3>Ігор Дем'яненко</h3>
                         <p>Product Designer</p>
                     </li>
-                    <li>
+                    <li class="team-point">
                         <img src="./images/olga.jpg" alt="Frontend Developer Olga Repina" width="270" height="260">
                         <h3>Ольга Рєпіна</h3>
                         <p>Frontend Developer</p>
                     </li>
-                    <li>
+                    <li class="team-point">
                         <img src="./images/mikola.jpg" alt="Marketing Mikola Tarasov" width="270" height="260">
                         <h3>Микола Тарасов</h3>
                         <p>Marketing</p>
                     </li>
-                    <li>
+                    <li class="team-point">
                         <img src="./images/mihailo.jpg" alt="UI Designer Mihailo Yermakov" width="270" height="260">
                         <h3>Михайло Єрмаков</h3>
                         <p>UI Designer</p>
