--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 <!--Unicue site container-->
         <main>
 <!-- hero -->
-            <section class="hero">
+            <section class="section hero">
                 <div class="container hero-content">
                     <h1>Ефективні рішення для вашого бізнесу</h1>
                     <button type="button" class="order-btn">
@@ -56,75 +56,81 @@
             </section>
 
 <!-- our benefits -->
-            <section class="benefits container">
-                <h2></h2>
-                <ul class="benefits-list list">
-                    <li class="benefits-point">
-                        <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
-                        <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
-                    </li>
-                    <li class="benefits-point">
-                        <h3>ПУНКТУАЛЬНІСТЬ</h3>
-                        <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
-                    </li>
-                    <li class="benefits-point">
-                        <h3>ПЛАНУВАННЯ</h3>
-                        <p>Так само консультація з широким активом значною мірою зумовлює.</p>
-                    </li>
-                    <li class="benefits-point">
-                        <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-                        <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
-                    </li>
-                </ul>
+            <section class="section benefits">
+               <div class="container">
+                    <h2></h2>
+                    <ul class="benefits-list list">
+                        <li class="benefits-point">
+                            <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
+                            <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
+                        </li>
+                        <li class="benefits-point">
+                            <h3>ПУНКТУАЛЬНІСТЬ</h3>
+                            <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
+                        </li>
+                        <li class="benefits-point">
+                            <h3>ПЛАНУВАННЯ</h3>
+                            <p>Так само консультація з широким активом значною мірою зумовлює.</p>
+                        </li>
+                        <li class="benefits-point">
+                            <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+                            <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
+                        </li>
+                    </ul>
+               </div>
             </section>
 
 <!-- what we do -->
-            <section class="whatwedo container">
-                <h2>Чим ми займаємося</h2>
-                <ul class="whatwedo-list list">
-                    <li class="whatwedo-point">
-                        <img src="./images/img_code.jpg" alt="coding" width="370" height="294">
-                    </li>
-                    <li class="whatwedo-point">
-                        <img src="./images/img_app.jpg" alt="app developer" width="370" height="294">
-                    </li>
-                    <li class="whatwedo-point">
-                        <img src="./images/img_color.jpg" alt="color expirience" width="370" height="294">
-                    </li>
-                </ul>
+            <section class="section whatwedo">
+                <div class="container">
+                    <h2>Чим ми займаємося</h2>
+                    <ul class="whatwedo-list list">
+                        <li class="whatwedo-point">
+                            <img src="./images/img_code.jpg" alt="coding" width="370" height="294">
+                        </li>
+                        <li class="whatwedo-point">
+                            <img src="./images/img_app.jpg" alt="app developer" width="370" height="294">
+                        </li>
+                        <li class="whatwedo-point">
+                            <img src="./images/img_color.jpg" alt="color expirience" width="370" height="294">
+                        </li>
+                    </ul>
+                </div>
             </section>
 
 <!-- our team -->
-            <section class="team container">
-                <h2>Наша команда</h2>
-                <ul class="team-list list">
-                    <li class="team-point">
-                        <img src="./images/igor.jpg" alt="Product Designer Igor Demianenko" width="270" height="260">
-                        <h3>Ігор Дем'яненко</h3>
-                        <p>Product Designer</p>
-                    </li>
-                    <li class="team-point">
-                        <img src="./images/olga.jpg" alt="Frontend Developer Olga Repina" width="270" height="260">
-                        <h3>Ольга Рєпіна</h3>
-                        <p>Frontend Developer</p>
-                    </li>
-                    <li class="team-point">
-                        <img src="./images/mikola.jpg" alt="Marketing Mikola Tarasov" width="270" height="260">
-                        <h3>Микола Тарасов</h3>
-                        <p>Marketing</p>
-                    </li>
-                    <li class="team-point">
-                        <img src="./images/mihailo.jpg" alt="UI Designer Mihailo Yermakov" width="270" height="260">
-                        <h3>Михайло Єрмаков</h3>
-                        <p>UI Designer</p>
-                    </li>
-                </ul>
+            <section class="team section">
+                <div class="container">
+                    <h2>Наша команда</h2>
+                    <ul class="team-list list">
+                        <li class="team-point">
+                            <img src="./images/igor.jpg" alt="Product Designer Igor Demianenko" width="270" height="260">
+                            <h3>Ігор Дем'яненко</h3>
+                            <p>Product Designer</p>
+                        </li>
+                        <li class="team-point">
+                            <img src="./images/olga.jpg" alt="Frontend Developer Olga Repina" width="270" height="260">
+                            <h3>Ольга Рєпіна</h3>
+                            <p>Frontend Developer</p>
+                        </li>
+                        <li class="team-point">
+                            <img src="./images/mikola.jpg" alt="Marketing Mikola Tarasov" width="270" height="260">
+                            <h3>Микола Тарасов</h3>
+                            <p>Marketing</p>
+                        </li>
+                        <li class="team-point">
+                            <img src="./images/mihailo.jpg" alt="UI Designer Mihailo Yermakov" width="270" height="260">
+                            <h3>Михайло Єрмаков</h3>
+                            <p>UI Designer</p>
+                        </li>
+                    </ul>
+                </div>
             </section>
 
         </main>
         
 <!--knock knock, who is there?-->
-        <footer class="foot">
+        <footer class="section foot">
             <div class="container">
                 <!-- logo -->
                 <a href="./index.html" class="logo-foot">
