--- a/portfolio.html
+++ b/portfolio.html
@@ -48,83 +48,86 @@
 <!--Unicue site container-->
         <main>
 <!-- Filter -->
-            <section class="container">
-                <h1></h1>
-                <ul class="filter list">
-                    <li class="filter-btn">
-                        <button type="button" class="btn">
-                            Усі
-                        </button>
-                    </li>
-                    <li class="filter-btn">
-                        <button type="button" class="btn">
-                            Веб-сайти
-                        </button>
-                    </li>
-                    <li class="filter-btn">
-                        <button type="button" class="btn">
-                            Додатки
-                        </button>
-                    </li>
-                    <li class="filter-btn">
-                        <button type="button" class="btn">
-                            Дизайн
-                        </button>
-                    </li>
-                    <li class="filter-btn">
-                        <button type="button" class="btn">
-                            Маркетинг
-                        </button>
-                    </li>
-                </ul>
-
-                <ul class="products-list products list">
-                    <li class="product-position">
-                        <img src="./images/tehnocrack.jpg" alt="tehnocrack web site" width="370" height="294">
-                        <h2>Технокряк</h2>
-                        <p>Веб-сайт</p>
-                    </li>
-                    <li class="product-position">
-                        <img src="./images/basketball.jpg" alt="poster for basketball match New Orleans vs Golden star" width="370" height="294">
-                        <h2>Постер New Orlean vs Golden Star</h2>
-                        <p>Дизайн</p>
-                    </li>
-                    <li class="product-position">
-                        <img src="./images/seafood.jpg" alt="app for seafood restaurant" width="370" height="294">
-                        <h2>Ресторан Seafood</h2>
-                        <p>Додаток</p>
-                    </li>
-                    <li class="product-position">
-                        <img src="./images/Prime.jpg" alt="marketing for Prime project" width="370" height="294">
-                        <h2>Проєкт Prime</h2>
-                        <p>Маркетинг</p>
-                    </li>
-                    <li class="product-position">
-                        <img src="./images/boxes.jpg" alt="app for Boxes project" width="370" height="294">
-                        <h2>Проєкт Boxes</h2>
-                        <p>Додаток</p>
-                    </li>
-                    <li class="product-position">
-                        <img src="./images/noborders.jpg" alt="web site for Inspiration has no Borders" width="370" height="294">
-                        <h2>Inspiration has no Borders</h2>
-                        <p>Веб-сайт</p>
-                    </li>
-                    <li class="product-position">
-                        <img src="./images/limited.jpg" alt="design for Limited Edition publication" width="370" height="294">
-                        <h2>Видання Limited Edition</h2>
-                        <p>Дизайн</p>
-                    </li>
-                    <li class="product-position">
-                        <img src="./images/lab.jpg" alt="marketing for LAB project" width="370" height="294">
-                        <h2>Проєкт LAB</h2>
-                        <p>Маркетинг</p>
-                    </li>
-                    <li class="product-position">
-                        <img src="./images/business.jpg" alt="app for Growing Business company" width="370" height="294">
-                        <h2>Growing Business</h2>
-                        <p>Додаток</p>
-                    </li>
-                </ul>
+            <section class="section">
+                <div class="container">
+                    <h1></h1>
+                    <ul class="filter list">
+                        <li class="filter-btn">
+                            <button type="button" class="btn">
+                                Усі
+                            </button>
+                        </li>
+                        <li class="filter-btn">
+                            <button type="button" class="btn">
+                                Веб-сайти
+                            </button>
+                        </li>
+                        <li class="filter-btn">
+                            <button type="button" class="btn">
+                                Додатки
+                            </button>
+                        </li>
+                        <li class="filter-btn">
+                            <button type="button" class="btn">
+                                Дизайн
+                            </button>
+                        </li>
+                        <li class="filter-btn">
+                            <button type="button" class="btn">
+                                Маркетинг
+                            </button>
+                        </li>
+                    </ul>
+                    
+                    <ul class="products-list products list">
+                        <li class="product-position">
+                            <img src="./images/tehnocrack.jpg" alt="tehnocrack web site" width="370" height="294">
+                            <h2>Технокряк</h2>
+                            <p>Веб-сайт</p>
+                        </li>
+                        <li class="product-position">
+                            <img src="./images/basketball.jpg" alt="poster for basketball match New Orleans vs Golden star" width="370"
+                                height="294">
+                            <h2>Постер New Orlean vs Golden Star</h2>
+                            <p>Дизайн</p>
+                        </li>
+                        <li class="product-position">
+                            <img src="./images/seafood.jpg" alt="app for seafood restaurant" width="370" height="294">
+                            <h2>Ресторан Seafood</h2>
+                            <p>Додаток</p>
+                        </li>
+                        <li class="product-position">
+                            <img src="./images/Prime.jpg" alt="marketing for Prime project" width="370" height="294">
+                            <h2>Проєкт Prime</h2>
+                            <p>Маркетинг</p>
+                        </li>
+                        <li class="product-position">
+                            <img src="./images/boxes.jpg" alt="app for Boxes project" width="370" height="294">
+                            <h2>Проєкт Boxes</h2>
+                            <p>Додаток</p>
+                        </li>
+                        <li class="product-position">
+                            <img src="./images/noborders.jpg" alt="web site for Inspiration has no Borders" width="370" height="294">
+                            <h2>Inspiration has no Borders</h2>
+                            <p>Веб-сайт</p>
+                        </li>
+                        <li class="product-position">
+                            <img src="./images/limited.jpg" alt="design for Limited Edition publication" width="370" height="294">
+                            <h2>Видання Limited Edition</h2>
+                            <p>Дизайн</p>
+                        </li>
+                        <li class="product-position">
+                            <img src="./images/lab.jpg" alt="marketing for LAB project" width="370" height="294">
+                            <h2>Проєкт LAB</h2>
+                            <p>Маркетинг</p>
+                        </li>
+                        <li class="product-position">
+                            <img src="./images/business.jpg" alt="app for Growing Business company" width="370" height="294">
+                            <h2>Growing Business</h2>
+                            <p>Додаток</p>
+                        </li>
+                    </ul>
+                </div>
             </section>
         </main>
 
