--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 <!-- our benefits -->
             <section class="section benefits">
                <div class="container">
-                    <h2></h2>
+                    <h2 visibility: hidden> Our benefits</h2>
                     <ul class="benefits-list list">
                         <li class="benefits-point">
                             <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
